Made SVG braille cell images interactive, to show 7-8 dots

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
       <h2 id="8-dot">8-dot braille</h2>
 
-      <img class="braille-glyph" src="./assets/8-dot-braille.svg" alt="8-dot braille cell"/>
-      <img class="braille-glyph" src="./assets/8-dot-braille-unicode-hex.svg" alt="8-dot braille cell"/>
+      <object class="braille-glyph" data="./assets/8-dot-braille.svg" alt="8-dot braille cell"> </object>
+      <object class="braille-glyph" data="./assets/8-dot-braille-unicode-hex.svg" alt="8-dot braille cell"> </object>
 
       <p class="dots">Printed braille normally consists of 6 dots, which provides 64 unique dot combinations (including the blank cell). For use with computers, refreshable braille displays typically have 8 dots, with two additional dots on the bottom, yielding 256 unique dot combinations. Unicode 3.0 introduced an encoding for each combination in Unicode range u+2800 to u+28FF. These cells are defined as symbols, not as letters, since each language may use each glyph for a different letter or meaning.</p>
 
