enabled range setting and negative number generation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <header>
     <h1>SparkBraille: <span>interactive braille display charts</span></h1>
     <section id="controls">
+      <label>min: <input type="number" id="min_input" value="0"></label>
+      <label>max: <input type="number" id="max_input" value="500"></label>
       <label>record count: <input type="number" id="record_count_input" value="40" min="2" max="120"></label>
       <label>area chart on: <input type="checkbox" id="area-checkbox"></label>
       <button id="data_params_submit">generate new chart</button>
